# StockSavvy

./: .dockerignore  .gitignore  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
__legacy/: .dockerignore  README.md  docker-compose.prod.yml  docker-compose.yml
__legacy/app/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  requirements.txt
__legacy/app/config/: celery.py  settings.py  urls.py
__legacy/app/templates/: base.html  header.html
app/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh
app/apps/accounts/: adapters.py  admin.py  forms.py  manager.py  models.py  urls.py  validators.py  views.py
app/apps/stocks/: admin.py  apps.py  managers.py  models.py  tasks.py  urls.py  views.py
app/config/: celery.py  env.py  redis_broker.conf  redis_cache.conf  settings.py  urls.py
app/static/js/: footer.js  header.js  themeToggle.js
app/templates/: base.html  footer.html  header.html  pagination.html
app/templates/account/: account_inactive.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  settings.html  signup.html  signup_closed.html
app/templates/accounts/: settings.html
app/templates/django_registration/: activation_email_body.txt  (+3 more)
app/utils/: plurals.py
docker/dev/: .env-example  Dockerfile  docker-compose.yml
nginx/: Dockerfile  stocksavvy.conf
scripts/: pipfreeze.sh
scripts/dev/: createsuperuser.sh  down.sh  load_stock_data.sh  up.sh
scripts/prod/: createsuperuser.sh
(+76 files in other folders)
