[tool.poetry]
name = "stocksavvy"
version = "0.1.0"
description = ""
authors = ["Stepan <kornevstepan169@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
pydantic-settings = "^2.6.1"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
